Fix typo on Transition Property docs page (#1203)
* Update transition-property.mdx

* Update transition-property.mdx

Co-authored-by: Adam Wathan <adam.wathan@gmail.com>

--- a/src/pages/docs/transition-property.mdx
+++ b/src/pages/docs/transition-property.mdx
@@ -35,7 +35,7 @@ Use the `transition-{properties}` utilities to specify which properties should t
 For situations where the user has specified that they prefer reduced motion, you can conditionally apply animations and transitions using the `motion-safe` and `motion-reduce` variants:
 
 ```html
-<button class="transition transform hover:-translate-y-1 **motion-reduce:transition-none motion-reduce:transform-none** ...">
+<button class="transition transform hover:-translate-y-1 **motion-reduce:transition-none motion-reduce:hover:transform-none** ...">
   Hover me
 </button>
 ```
