col-span-[] doesn't work (#1156)
* col-span-[] doesn't work

col-span didn't work when trying it, was trying to figure out why it was not compiling, but it's the documentation that doesn't show it correctly.

Co-authored-by: Simon Vrachliotis <simon@simonswiss.com>

--- a/src/pages/docs/grid-column.mdx
+++ b/src/pages/docs/grid-column.mdx
@@ -148,4 +148,4 @@ Learn more about customizing the default theme in the [theme customization](/doc
 
 ### Arbitrary values
 
-<ArbitraryValues property="grid-column/grid-column-start/grid-column-end" featuredClass="col-span-[span_16_/_span 16]" />
+<ArbitraryValues property="grid-column/grid-column-start/grid-column-end" featuredClass="col-[16_/_span_16]" />
