Fix example in Ring offset width page

--- a/src/pages/docs/ring-offset-width.mdx
+++ b/src/pages/docs/ring-offset-width.mdx
@@ -41,9 +41,9 @@ Use the `ring-offset-{width}` utilities to simulate an offset by adding solid wh
 </Example>
 
 ```html
-<button class="... ring ring-pink-500 **ring-offset-0**">ring-offet-0</button>
-<button class="... ring ring-pink-500 **ring-offset-2**">ring-offset-2</button>
-<button class="... ring ring-pink-500 **ring-offset-4**">ring-offset-4</button>
+<button class="... ring ring-pink-500 **ring-offset-0**">Button A</button>
+<button class="... ring ring-pink-500 **ring-offset-2**">Button B</button>
+<button class="... ring ring-pink-500 **ring-offset-4**">Button C</button>
 ```
 
 ### Changing the offset color
