Fixes https://github.com/tailwindlabs/tailwindcss.com/issues/1183

--- a/src/pages/docs/display.mdx
+++ b/src/pages/docs/display.mdx
@@ -253,26 +253,26 @@ Use the `table`, `.table-row`, `.table-cell`, `.table-caption`, `.table-column`,
 <div class="**table** w-full ...">
   <div class="**table-header-group** ...">
     <div class="**table-row**">
-      <div class="**table-cell** text-left ...">Title</div>
+      <div class="**table-cell** text-left ...">Song</div>
       <div class="**table-cell** text-left ...">Artist</div>
       <div class="**table-cell** text-left ...">Year</div>
     </div>
   </div>
   <div class="**table-row-group**">
     <div class="**table-row**">
-      <div class="**table-cell** ...">Chocolate Starfish And The Hot Dog Flavored Water</div>
-      <div class="**table-cell** ...">Limp Bizkit</div>
-      <div class="**table-cell** ...">2000</div>
+      <div class="**table-cell** ...">The Sliding Mr. Bones (Next Stop, Pottersville)</div>
+      <div class="**table-cell** ...">Malcolm Lockyer</div>
+      <div class="**table-cell** ...">1961</div>
     </div>
     <div class="**table-row**">
-      <div class="**table-cell** ...">Significant Other</div>
-      <div class="**table-cell** ...">Limp Bizkit</div>
-      <div class="**table-cell** ...">1999</div>
+          <div class="**table-cell** ...">Witchy Woman</div>
+          <div class="**table-cell** ...">The Eagles</div>
+          <div class="**table-cell** ...">1972</div>
     </div>
     <div class="**table-row**">
-      <div class="**table-cell** ...">Three Dollar Bill, Y’all $</div>
-      <div class="**table-cell** ...">Limp Bizkit</div>
-      <div class="**table-cell** ...">1997</div>
+      <div class="**table-cell** ...">Shining Star</div>
+      <div class="**table-cell** ...">Earth, Wind, and Fire</div>
+      <div class="**table-cell** ...">1975</div>
     </div>
   </div>
 </div>
