Add GitHub icon and link to the typography plugin page

--- a/src/pages/docs/typography-plugin.mdx
+++ b/src/pages/docs/typography-plugin.mdx
@@ -2,6 +2,7 @@
 title: '@tailwindcss/typography'
 shortTitle: Typography
 description: Beautiful typographic defaults for HTML you don't control.
+repo: https://github.com/tailwindlabs/tailwindcss-typography
 ---
 
 import { TipGood, TipBad, TipInfo } from '@/components/Tip'
