:memo: Flex and Grid Doc Improvement (#1191)
* :memo: Flex and Grid Doc Improvement
[x] Added defaultClass grid for align-content when Applying Conditionally
[x] Added defaultClass flex for align-items when Applying Conditionally
[x] Added defaultClass grid for gap on Arbitrary values
[x] Added defaultClass grid grid-flex-col for grid-auto-columns on Arbitrary values
[x] Added defaultClass grid grid-flow-row for grid-auto-rows on Arbitrary values
[x] Added defaultClass grid for grid-template-rows on Arbitrary values
...more

* revert prettier bad format, when updating justify-items.mdx

--- a/src/pages/docs/align-content.mdx
+++ b/src/pages/docs/align-content.mdx
@@ -174,8 +174,8 @@ Use `content-evenly` to distribute rows in a container such that there is an equ
 
 ### <Heading ignore>Hover, focus, and other states</Heading>
 
-<HoverFocusAndOtherStates defaultClass="content-start" featuredClass="content-around" />
+<HoverFocusAndOtherStates defaultClass="grid content-start" featuredClass="content-around" />
 
 ### <Heading ignore>Breakpoints and media queries</Heading>
 
-<BreakpointsAndMediaQueries defaultClass="content-start" featuredClass="content-around" />
+<BreakpointsAndMediaQueries defaultClass="grid content-start" featuredClass="content-around" />
