--- a/src/pages/docs/align-items.mdx
+++ b/src/pages/docs/align-items.mdx
@@ -127,8 +127,8 @@ Use `items-baseline` to align items along the container's cross axis such that a
 
 ### <Heading ignore>Hover, focus, and other states</Heading>
 
-<HoverFocusAndOtherStates defaultClass="items-stretch" featuredClass="items-center" />
+<HoverFocusAndOtherStates defaultClass="flex items-stretch" featuredClass="items-center" />
 
 ### <Heading ignore>Breakpoints and media queries</Heading>
 
-<BreakpointsAndMediaQueries defaultClass="items-stretch" featuredClass="items-center" />
+<BreakpointsAndMediaQueries defaultClass="flex items-stretch" featuredClass="items-center" />
