--- a/src/pages/docs/gap.mdx
+++ b/src/pages/docs/gap.mdx
@@ -114,4 +114,4 @@ Learn more about customizing the default theme in the [theme customization](/doc
 
 ### Arbitrary values
 
-<ArbitraryValues property="gap" featuredClass="gap-[2.75rem]" />
+<ArbitraryValues property="gap" defaultClass="grid" featuredClass="gap-[2.75rem]" />
