--- a/src/pages/docs/grid-auto-columns.mdx
+++ b/src/pages/docs/grid-auto-columns.mdx
@@ -60,4 +60,4 @@ Learn more about customizing the default theme in the [theme customization](/doc
 
 ### Arbitrary values
 
-<ArbitraryValues property="grid-auto-columns" featuredClass="auto-cols-[minmax(0,_2fr)]" />
+<ArbitraryValues property="grid-auto-columns" defaultClass="grid grid-flow-col" featuredClass="auto-cols-[minmax(0,_2fr)]" />
