--- a/src/pages/docs/grid-auto-rows.mdx
+++ b/src/pages/docs/grid-auto-rows.mdx
@@ -60,4 +60,4 @@ Learn more about customizing the default theme in the [theme customization](/doc
 
 ### Arbitrary values
 
-<ArbitraryValues property="grid-auto-rows" featuredClass="auto-rows-[minmax(0,_2fr)]" />
+<ArbitraryValues property="grid-auto-rows" defaultClass="grid grid-flow-row" featuredClass="auto-rows-[minmax(0,_2fr)]" />
