--- a/src/pages/docs/justify-content.mdx
+++ b/src/pages/docs/justify-content.mdx
@@ -137,8 +137,8 @@ Use `justify-evenly` to justify items along the container's main axis such that 
 
 ### <Heading ignore>Hover, focus, and other states</Heading>
 
-<HoverFocusAndOtherStates defaultClass="justify-start" featuredClass="justify-between" />
+<HoverFocusAndOtherStates defaultClass="flex justify-start" featuredClass="justify-between" />
 
 ### <Heading ignore>Breakpoints and media queries</Heading>
 
-<BreakpointsAndMediaQueries defaultClass="justify-start" featuredClass="justify-between" />
+<BreakpointsAndMediaQueries defaultClass="flex justify-start" featuredClass="justify-between" />
