--- a/src/pages/docs/justify-items.mdx
+++ b/src/pages/docs/justify-items.mdx
@@ -157,8 +157,8 @@ Use `justify-items-stretch` to stretch items along their inline axis:
 
 ### <Heading ignore>Hover, focus, and other states</Heading>
 
-<HoverFocusAndOtherStates defaultClass="justify-items-start" featuredClass="justify-items-center" />
+<HoverFocusAndOtherStates defaultClass="grid justify-items-start" featuredClass="justify-items-center" />
 
 ### <Heading ignore>Breakpoints and media queries</Heading>
 
-<BreakpointsAndMediaQueries defaultClass="justify-items-start" featuredClass="justify-items-center" />
+<BreakpointsAndMediaQueries defaultClass="grid justify-items-start" featuredClass="justify-items-center" />
