--- a/src/pages/docs/place-content.mdx
+++ b/src/pages/docs/place-content.mdx
@@ -186,8 +186,8 @@ Use `place-content-stretch` to stretch grid items along their grid areas on the 
 
 ### <Heading ignore>Hover, focus, and other states</Heading>
 
-<HoverFocusAndOtherStates defaultClass="place-content-start" featuredClass="place-content-center" />
+<HoverFocusAndOtherStates defaultClass="grid place-content-start" featuredClass="place-content-center" />
 
 ### <Heading ignore>Breakpoints and media queries</Heading>
 
-<BreakpointsAndMediaQueries defaultClass="place-content-start" featuredClass="place-content-center" />
+<BreakpointsAndMediaQueries defaultClass="grid place-content-start" featuredClass="place-content-center" />
