--- a/src/pages/docs/place-items.mdx
+++ b/src/pages/docs/place-items.mdx
@@ -177,8 +177,8 @@ Use `place-items-stretch` to stretch items along their grid areas on both axis:
 
 ### <Heading ignore>Hover, focus, and other states</Heading>
 
-<HoverFocusAndOtherStates defaultClass="place-items-start" featuredClass="place-items-center" />
+<HoverFocusAndOtherStates defaultClass="grid place-items-start" featuredClass="place-items-center" />
 
 ### <Heading ignore>Breakpoints and media queries</Heading>
 
-<BreakpointsAndMediaQueries defaultClass="place-items-start" featuredClass="place-items-center" />
+<BreakpointsAndMediaQueries defaultClass="grid place-items-start" featuredClass="place-items-center" />
