--- a/src/pages/docs/grid-template-rows.mdx
+++ b/src/pages/docs/grid-template-rows.mdx
@@ -80,4 +80,4 @@ Learn more about customizing the default theme in the [theme customization](/doc
 
 ### Arbitrary values
 
-<ArbitraryValues property="grid-template-rows" featuredClass="grid-rows-[200px_minmax(900px,_1fr)_100px]" />
+<ArbitraryValues property="grid-template-rows" defaultClass="grid" featuredClass="grid-rows-[200px_minmax(900px,_1fr)_100px]" />
