--- a/src/pages/docs/fill.mdx
+++ b/src/pages/docs/fill.mdx
@@ -37,11 +37,11 @@ This can be useful for styling icon sets like [Heroicons](https://heroicons.com)
 
 ### <Heading ignore>Hover, focus, and other states</Heading>
 
-<HoverFocusAndOtherStates defaultClass="stroke-cyan-500" featuredClass="stroke-cyan-700" element="svg" />
+<HoverFocusAndOtherStates defaultClass="fill-cyan-500" featuredClass="fill-cyan-700" element="svg" />
 
 ### <Heading ignore>Breakpoints and media queries</Heading>
 
-<BreakpointsAndMediaQueries defaultClass="stroke-cyan-500" featuredClass="stroke-cyan-700" element="svg" />
+<BreakpointsAndMediaQueries defaultClass="fill-cyan-500" featuredClass="fill-cyan-700" element="svg" />
 
 ---
 
