[nit]: updated featuredClass typo (#1217)
updated featuredClass typo for HoverFocusAndOtherStates

--- a/src/pages/docs/background-position.mdx
+++ b/src/pages/docs/background-position.mdx
@@ -104,7 +104,7 @@ Use the `bg-{side}` utilities to control the position of an element's background
 
 ### <Heading ignore>Hover, focus, and other states</Heading>
 
-<HoverFocusAndOtherStates featuredClass="bg-to">
+<HoverFocusAndOtherStates featuredClass="bg-top">
 
 ```html
 <div class="bg-center **hover:bg-top** ..." style="background-image: url(...)"></div>
