Remove @apply in docs when possible (#1124)
* Remove using @apply when it is not needed

https://twitter.com/adamwathan/status/1479536914218864642

Personally, I am using @apply because the docs use it. 
If it is suggested not to, I suggest to remove it from the docs

* Update using-with-preprocessors.mdx

Co-authored-by: Adam Wathan <adam.wathan@gmail.com>

--- a/src/pages/docs/using-with-preprocessors.mdx
+++ b/src/pages/docs/using-with-preprocessors.mdx
@@ -57,7 +57,8 @@ One important thing to note about `postcss-import` is that it strictly adheres t
 /* components.css */
 
 .btn {
-  @apply px-4 py-2 rounded font-semibold bg-gray-200 text-black;
+  padding: theme('spacing.4') theme('spacing.2');
+  /* ... */
 }
 
 /* Will not work */
@@ -77,14 +78,16 @@ The easiest solution to this problem is to never mix regular CSS and imports in 
 ```css
 /* components/buttons.css */
 .btn {
-  @apply px-4 py-2 rounded font-semibold bg-gray-200 text-black;
+  padding: theme('spacing.4') theme('spacing.2');
+  /* ... */
 }
 ```
 
 ```css
 /* components/card.css */
 .card {
-  @apply p-4 bg-white shadow rounded;
+  padding: theme('spacing.4');
+  /* ... */
 }
 ```
 
