Update functions-and-directives.mdx (#1219)
Corrected `specificied` typo.

--- a/src/pages/docs/functions-and-directives.mdx
+++ b/src/pages/docs/functions-and-directives.mdx
@@ -268,7 +268,7 @@ The `screen` function allows you to create media queries that reference your bre
 }
 ```
 
-This will resolve to the underlying screen value at build-time, generating a regular media query that matches specificied breakpoint:
+This will resolve to the underlying screen value at build-time, generating a regular media query that matches specified breakpoint:
 
 ```css
 @media (min-width: 640px) {
