Fix grammar in starting paragraph (#1232)

--- a/src/pages/docs/hover-focus-and-other-states.mdx
+++ b/src/pages/docs/hover-focus-and-other-states.mdx
@@ -6,7 +6,7 @@ description: Using utilities to style elements on hover, focus, and more.
 
 import { TipGood, TipBad, TipInfo } from '@/components/Tip'
 
-Every utility class in Tailwind can be applied _conditionally_ by adding modifier to the beginning of the class name that describes the condition you want to target.
+Every utility class in Tailwind can be applied _conditionally_ by adding a modifier to the beginning of the class name that describes the condition you want to target.
 
 For example, to apply the `bg-sky-700` class on hover, use the `hover:bg-sky-700` class:
 
