Add note about content paths being relative to project root

--- a/src/pages/docs/content-configuration.mdx
+++ b/src/pages/docs/content-configuration.mdx
@@ -50,6 +50,8 @@ Paths are configured as [glob patterns](https://en.wikipedia.org/wiki/Glob_(prog
 
 Tailwind uses the [fast-glob](https://github.com/mrmlnc/fast-glob) library under-the-hood — check out their documentation other supported pattern features.
 
+Paths are relative to your project root, _not_ your `tailwind.config.js` file, so if your `tailwind.config.js` file is in a custom location, you should still write your paths relative to the root of your project.
+
 ### Pattern recommendations
 
 For the best performance and to avoid false positives, be as specific as possible with your content configuration.
