Small grammar fix (#1244)
Remove apostrophe from possessive "its"

--- a/src/pages/docs/display.mdx
+++ b/src/pages/docs/display.mdx
@@ -40,7 +40,7 @@ Use `inline`, `inline-block`, and `block` to control the flow of text and elemen
   will wrap the element to prevent the text inside from extending beyond its parent.
 
   Lastly, using the property <span class="**block**">display: block</span>
-  will put the element on it's own line and fill its parent.
+  will put the element on its own line and fill its parent.
 </div>
 ```
 
