Mark some posts as updates

--- a/src/pages/blog/automatic-class-sorting-with-prettier/index.mdx
+++ b/src/pages/blog/automatic-class-sorting-with-prettier/index.mdx
@@ -8,6 +8,7 @@ export const meta = {
   date: '2022-01-24T19:00:00.000Z',
   authors: [reinink, adamwathan],
   image: card,
+  isUpdate: true
 }
 
 People have been talking about the best way to sort your utility classes in Tailwind projects for [at least four years](https://github.com/tailwindlabs/discuss/issues/97). Today we're excited to announce that you can finally stop worrying about it with the release of our official <a href="https://github.com/tailwindlabs/prettier-plugin-tailwindcss">Prettier plugin for Tailwind CSS</a>.
