--- a/src/pages/blog/headless-ui-v1-5/index.mdx
+++ b/src/pages/blog/headless-ui-v1-5/index.mdx
@@ -13,6 +13,7 @@ export const meta = {
   date: '2022-02-24T12:00:00.000Z',
   authors: [reinink, adamwathan],
   image: card,
+  isUpdate: true
 }
 
 We just released Headless UI v1.5, which includes a brand new `Combobox` component. Comboboxes are like select controls but with autocomplete/typeahead functionality, and are a great alternative to a regular select when you're working with large datasets and want to quickly filter for the right option.
