--- a/src/pages/blog/standalone-cli/index.mdx
+++ b/src/pages/blog/standalone-cli/index.mdx
@@ -7,6 +7,7 @@ export const meta = {
   date: '2021-12-16T16:00:00.000Z',
   authors: [adamwathan],
   image,
+  isUpdate: true
 }
 
 <!--excerpt-->
