--- a/src/pages/blog/tailwindcss-typography-v0-5/index.mdx
+++ b/src/pages/blog/tailwindcss-typography-v0-5/index.mdx
@@ -7,6 +7,7 @@ export const meta = {
   date: '2021-12-17T18:50:00.000Z',
   authors: [adamwathan],
   image,
+  isUpdate: true
 }
 
 <!--excerpt-->
