--- a/src/pages/blog/tailwind-ui-ecommerce/index.mdx
+++ b/src/pages/blog/tailwind-ui-ecommerce/index.mdx
@@ -8,6 +8,7 @@ export const meta = {
   date: '2021-08-11T19:30:00.000Z',
   authors: [adamwathan],
   image: card,
+  isUpdate: true
 }
 
 <!--excerpt-->
