--- a/src/pages/blog/just-in-time-the-next-generation-of-tailwind-css/index.mdx
+++ b/src/pages/blog/just-in-time-the-next-generation-of-tailwind-css/index.mdx
@@ -9,6 +9,12 @@ export const meta = {
   image,
 }
 
+<!--excerpt-->
+
+One of the hardest constraints we've had to deal with as we've improved Tailwind CSS over the years is the generated file size in development. With enough customizations to your config file, the generated CSS can reach 10mb or more, and there's only so much CSS that build tools and even the browser itself will comfortably tolerate.
+
+<!--/excerpt-->
+
 _**Update**: As of Tailwind CSS v2.1, the new Just-in-Time engine is included right in Tailwind CSS itself, so you don't need the `@tailwindcss/jit` package anymore. [Learn more in the documentation](https://tailwindcss.com/docs/just-in-time-mode)._
 
 One of the hardest constraints we've had to deal with as we've improved Tailwind CSS over the years is the generated file size in development. With enough customizations to your config file, the generated CSS can reach 10mb or more, and there's only so much CSS that build tools and even the browser itself will comfortably tolerate.
