--- a/src/pages/docs/configuration.mdx
+++ b/src/pages/docs/configuration.mdx
@@ -311,15 +311,19 @@ Now all of Tailwind's utility classes will be generated as `!important`:
 /* etc. */
 ```
 
-Note that any of your own custom utilities **will not** automatically be marked as `!important` by enabling this option.
-
-If you'd like to make your own utilities `!important`, just add `!important` to the end of each declaration yourself:
+This also applies to any custom utilities you define in your CSS using the `@layer utilities` directive:
 
 ```css
+/* Input */
 @layer utilities {
   .bg-brand-gradient {
-    background-image: linear-gradient(#3490dc, #6574cd) !important;
+    background-image: linear-gradient(#3490dc, #6574cd);
   }
+}
+
+/* Output */
+.bg-brand-gradient {
+  background-image: linear-gradient(#3490dc, #6574cd) !important;
 }
 ```
 
