--- a/src/pages/blog/2022-05-23-headless-ui-v1-6-tailwind-ui-team-management/index.mdx
+++ b/src/pages/blog/2022-05-23-headless-ui-v1-6-tailwind-ui-team-management/index.mdx
@@ -208,7 +208,7 @@ const selected = ref(people[3])
 
 To me the absolute best part is that you don't have to explicitly register anything under `components` anymore — any components that are in scope are automatically available to the template.
 
-Using `<script setup>` also lets you use [namespaced components](https://vuejs.org/api/sfc-script-setup.html#using-components) like `Listbox.Button` like we do in the React flavor of Headless UI. We haven't updated Headless UI to expose the components this way yet but we're probably going to do it soon, which will let you shave off a ton of imports
+Using `<script setup>` also lets you use [namespaced components](https://vuejs.org/api/sfc-script-setup.html#using-components) like `Listbox.Button` like we do in the React flavor of Headless UI. We haven't updated Headless UI to expose the components this way yet but we're probably going to do it soon, which will let you shave off a ton of imports.
 
 ---
 
